starting layout on screen 1

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
     <!--Primera pantalla press start-->
     <section class="seccionVisible seccionVisible1" id="fase1">
-        <div class="general general1">
-            <button onclick="cambioPantalla(2)" >START</button>
-        
+        <div class="sup">
+            <div class="fotoLogo">
+                
+            </div>
         </div>
+        <div class="cent"></div>
+        <div class="inf"></div>
     </section>
 
     <!--Segunda pantalla seleccion personajes-->
