basic design implement screen 1

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <!--Primera pantalla press start-->
     <section class="seccionVisible seccionVisible1" id="fase1">
         <div class="sup">
-            <div class="fotoLogo">
-                
+            <div class="logo">
+                <img src="img/logo.jpg" class="fotoLogo"/>
             </div>
         </div>
-        <div class="cent"></div>
-        <div class="inf"></div>
+        <div class="cent">
+            <img src="img/portada.jpg" class="fotoPortada"/>
+        </div>
+        <div class="inf">
+            <button class="startButtom" onclick="cambioPantalla(2)">START</button>
+        </div>
     </section>
 
     <!--Segunda pantalla seleccion personajes-->
