include photos of the players in phase 2 but they are not located in their position

--- a/index.html
+++ b/index.html
@@ -10,24 +10,52 @@
 
     <!--Primera pantalla press start-->
     <section class="seccionVisible seccionVisible1" id="fase1">
-        <div class="sup">
+        <div class="sup sup1">
             <div class="logo">
                 <img src="img/logo.jpg" class="fotoLogo"/>
             </div>
         </div>
-        <div class="cent">
+        <div class="cent cent1">
             <img src="img/portada.jpg" class="fotoPortada"/>
         </div>
-        <div class="inf">
+        <div class="inf inf1">
             <button class="startButtom" onclick="cambioPantalla(2)">START</button>
         </div>
     </section>
 
     <!--Segunda pantalla seleccion personajes-->
     <section class="seccionVisible seccionVisible2" id="fase2" style="display: none" >
-        <div class="general general2">
+        <div class="sup sup2">Selecciona Jugador</div>
+        <div class="cent cent2">
+            <div class="col1">
+                <div class="player1">Player 1</div>
+                <div class="fotoPlayer1">
+
+                </div>
+            </div>
+            <div class="col2">
+                <div class="jug1">
+                    <img src="img/bela1.jpg" class="fotoBela1"/>
+                </div>
+                <div class="jug2">
+                    <img src="img/paquito1.jpg" class="fotoPaquito1"/>
+                </div>
+                <div class="jug3">
+                    <img src="img/lebron1.jpg" class="fotoLebron1"/>
+                </div>
+                <div class="jug4">
+                    <img src="img/lamperti1.jpg" class="fotoLamperti1"/>
+                </div>
+            </div>
+            <div class="col3">
+                <div class="player2">Player 2</div>
+                <div class="fotoPlayer2">
+            </div>
+
+        </div>
+        <div class="inf inf2">
             <button onclick="cambioPantalla(3)">Seleccion Jugador</button>
-        
+
         </div>
     </section>
     <!--Tercera Pantalla Enfrentamiento-->
