Implement function to select player and switch to next screen when selected

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                 </div>
             </div>
             <div class="col2">
-                <div class="jug1">
+                <div class="jug1" id="bela" onclick="selectPersonaje('bela')">
                     <img src="img/bela1.jpg" class="fotoBela1" />
                 </div>
-                <div class="jug2">
+                <div class="jug2" id="paquito" onclick="selectPersonaje('paquito')">
                     <img src="img/paquito1.jpg" class="fotoPaquito1" />
                 </div>
-                <div class="jug3">
+                <div class="jug3" id="lebron" onclick="selectPersonaje('lebron')" >
                     <img src="img/lebron1.jpg" class="fotoLebron1" />
                 </div>
-                <div class="jug4">
+                <div class="jug4" id="lamperti" onclick="selectPersonaje('lamperti')">
                     <img src="img/lamperti1.jpg" class="fotoLamperti1" />
                 </div>
             </div>
