Inicio maquetacion fase 3 e incluyo foto de fondo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <div class="col1">
                 <div class="player1">Player 1</div>
                 <div class="fotoPlayer1">
-
                 </div>
             </div>
             <div class="col2">
@@ -56,17 +55,24 @@
             </div>
         </div>    
         <div class="inf inf2">
-            <button onclick="cambioPantalla(3)">Seleccion Jugador</button>
         </div>
-
     </section>
+
     <!--Tercera Pantalla Enfrentamiento-->
     <section class="seccionVisible seccionVisible3" id="fase3" style="display: none">
-        <div class="general general3">
-            <button onclick="cambioPantalla(4)">Golpe Player 1</button>
-            <button onclick="cambioPantalla(4)">Golpe Player 2</button>
-
+        <div class="sup sup3">
+            <div class="logo">
+                <img src="img/logo.jpg" class="fotoLogo" />
+            </div>
         </div>
+        <div class="cent cent3">
+            <img src="img/fotovs.jpg" class="fotoVersus" />
+        </div>
+        <div class="inf inf3">
+            <button onclick="cambioPantalla(4)">Golpe Player 1</button>
+            <button onclick="cambioPantalla(4)">Golpe Player 2</button>        </div>
+        </div>
+
     </section>
 
     <!--Cuarta Pantalla Muestra ganador-->
