--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
             </div>
         </div>
         <div class="cent cent3">
-            <img src="img/fotovs.jpg" class="fotoVersus" />
+            <div class="centIzq" id="player1" >Player 1</div>
+            <div class="centCent">
+                <img src="img/fotovs.jpg" class="fotoVersus" />
+
+            </div>
+            <div class="centDer" id="player2" >Player 2</div>
+            
         </div>
         <div class="inf inf3">
             <button onclick="cambioPantalla(4)">Golpe Player 1</button>
