--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         <div class="sup sup2">Selecciona Jugador</div>
         <div class="cent cent2">
             <div class="col1">
-                <div class="player1">Player 1</div>
-                <div class="fotoPlayer1">
-                </div>
+                <div class="player1" id="nameP1" ></div>
+                <div class="fotoPlayer1" id="p1Select"></div>
             </div>
             <div class="col2">
                 <div class="jug1" id="bela" onclick="selectPersonaje('bela')">
@@ -49,9 +48,8 @@
                 </div>
             </div>
             <div class="col3">
-                <div class="player2">Player 2</div>
-                <div class="fotoPlayer2">
-                </div>
+                <div class="player2" id="nameP2"></div>
+                <div class="fotoPlayer2" id="p2Select"></div>
             </div>
         </div>    
         <div class="inf inf2">
