--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             </div>
         </div>    
         <div class="inf inf2">
+            <button id="boton2" class="startButtom" onclick="cambioPantalla(3)" disabled = "true" >JUGAR</button>
+    
         </div>
     </section>
 
