--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             </div>
         </div>
         <div class="cent cent3">
-            <div class="centIzq" id="player1" >Player 1</div>
+            <div class="centIzq" id="p1Juega"></div>
             <div class="centCent">
                 <img src="img/fotovs.jpg" class="fotoVersus" />
 
             </div>
-            <div class="centDer" id="player2" >Player 2</div>
+            <div class="centDer" id="p2Juega" ></div>
             
         </div>
         <div class="inf inf3">
-            <button onclick="cambioPantalla(4)">Golpe Player 1</button>
-            <button onclick="cambioPantalla(4)">Golpe Player 2</button>        </div>
+            <button id="botonSaqueP1" onclick="cambioPantalla(4)">Saca Player 1</button>
+            <button id="botonSaqueP2" onclick="cambioPantalla(4)">Saca Player 2</button>        </div>
         </div>
 
     </section>
