Implementada funcion saque donde actua en el boton sacar y cada jugador recibe el daño

--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
             
         </div>
         <div class="inf inf3">
-            <button id="botonSaqueP1" onclick="cambioPantalla(4)">Saca Player 1</button>
-            <button id="botonSaqueP2" onclick="cambioPantalla(4)">Saca Player 2</button>        </div>
-        </div>
+            <button id="botonSaqueP1" onclick="sacar(player1)">Saca Player 1</button>
+            <button id="botonSaqueP2" onclick="sacar(2)">Saca Player 2</button>       
+         </div>
+        
 
     </section>
 
