Implemento if para detectar el jugador que ha ganado en la función sacar

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
         </div>
         <div class="inf inf3">
-            <button id="botonSaqueP1" onclick="sacar(player1)">Saca Player 1</button>
+            <button id="botonSaqueP1" onclick="sacar(1)">Saca Player 1</button>
             <button id="botonSaqueP2" onclick="sacar(2)">Saca Player 2</button>       
          </div>
         
@@ -85,7 +85,7 @@
     <!--Cuarta Pantalla Muestra ganador-->
     <section class="seccionVisible seccionVisible4" id="fase4" style="display: none">
         <div class="general general4">
-            <button onclick="cambioPantalla(1)">Nuevo Partido</button>
+            <button onclick="reiniciar()">Nuevo Partido</button>
 
         </div>
     </section>
