--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
 
     <!--Cuarta Pantalla Muestra ganador-->
     <section class="seccionVisible seccionVisible4" id="fase4" style="display: none">
-        <div class="general general4">
+        <div class="sup sup4">
+            <div class="logo">
+                <img src="img/logo.jpg" class="fotoLogo" />
+            </div>
+        </div>
+        <div id=ganador class="cent cent4">
+
+        </div>
+        <div class="inf inf4">
             <button onclick="reiniciar()">Nuevo Partido</button>
 
         </div>
