Implemento que desactive la opcion de seleccionar el jugador si ya esta seleccionado

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             
         </div>
         <div class="inf inf3">
-            <button id="botonSaqueP1" onclick="sacar(1)">Saca Player 1</button>
-            <button id="botonSaqueP2" onclick="sacar(2)">Saca Player 2</button>       
+            <button class="botonPlayer1" id="botonSaqueP1" onclick="sacar(1)">Saca Player 1</button>
+            <button class="botonPlayer2" id="botonSaqueP2" onclick="sacar(2)">Saca Player 2</button>       
          </div>
         
 
@@ -93,7 +93,7 @@
 
         </div>
         <div class="inf inf4">
-            <button onclick="reiniciar()">Nuevo Partido</button>
+            <button class="botonReinicio" onclick="reiniciar()">Nuevo Partido</button>
 
         </div>
     </section>
