Fotos de Backgroun encajan en proporcion correctamente

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
     <!--Tercera Pantalla Enfrentamiento-->
     <section class="seccionVisible seccionVisible3" id="fase3" style="display: none">
         <div class="sup sup3">
-            <div class="logo">
+            <div class="supIzq3" id="puntosP1"></div>
+            <div class="logo logoP3">
                 <img src="img/logo.jpg" class="fotoLogo" />
             </div>
+            <div class="supDer3" id="puntosP2"></div>
         </div>
         <div class="cent cent3">
             <div class="centIzq" id="p1Juega"></div>
@@ -71,8 +73,7 @@
                 <img src="img/fotovs.jpg" class="fotoVersus" />
 
             </div>
-            <div class="centDer" id="p2Juega" ></div>
-            
+            <div class="centDer" id="p2Juega" ></div>          
         </div>
         <div class="inf inf3">
             <button class="botonPlayer1" id="botonSaqueP1" onclick="sacar(1)">Saca Player 1</button>
