Incluyo pantalla marcador con puntos y quito background color de referencia en divs pendiente

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                 <img src="img/logo.jpg" class="fotoLogo" />
             </div>
         </div>
-        <div id=ganador class="cent cent4">
+        <div class="cent cent4">
+            <div id="textoGanador" class="textoGanador"></div>
+            <div id=ganador class="fotoGanador"></div>
 
         </div>
         <div class="inf inf4">
